--- a/MireaProject/app/src/main/res/menu/activity_main_drawer.xml
+++ b/MireaProject/app/src/main/res/menu/activity_main_drawer.xml
@@ -28,5 +28,13 @@
             android:id="@+id/nav_audioRecorder"
             android:icon="@drawable/ic_menu_slideshow"
             android:title="Audio Recorder" />
+        <item
+            android:id="@+id/nav_settings"
+            android:icon="@android:drawable/ic_menu_manage"
+            android:title="Settings" />
+        <item
+            android:id="@+id/nav_story"
+            android:icon="@android:drawable/ic_menu_recent_history"
+            android:title="Stories" />
     </group>
 </menu>
