--- a/MireaProject/app/src/main/res/menu/activity_main_drawer.xml
+++ b/MireaProject/app/src/main/res/menu/activity_main_drawer.xml
@@ -36,5 +36,9 @@
             android:id="@+id/nav_story"
             android:icon="@android:drawable/ic_menu_recent_history"
             android:title="Stories" />
+        <item
+            android:id="@+id/nav_map"
+            android:icon="@android:drawable/ic_dialog_map"
+            android:title="Map" />
     </group>
 </menu>
